--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -19,7 +19,7 @@ services:
             options:
                 max-size: "10M"
                 max-file: "5"
-        image: hortonworks/haveged:{{{get . "DOCKER_TAG_HAVEGED"}}}
+        image: docker-private.infra.cloudera.com/cloudera_thirdparty/haveged/haveged:{{{get . "DOCKER_TAG_HAVEGED"}}}
 
     logsink:
         labels:
@@ -30,7 +30,7 @@ services:
             - ./logs:/tmp
         networks:
         - {{{get . "DOCKER_NETWORK_NAME"}}}
-        image: hortonworks/socat:1.0.0
+        image: docker-private.infra.cloudera.com/cloudera_thirdparty/socat/socat:1.0.0
         logging:
             options:
                 max-size: "10M"
@@ -56,7 +56,7 @@ services:
             options:
                 max-size: "10M"
                 max-file: "5"
-        image: hortonworks/logspout:v3.2.2
+        image: docker-private.infra.cloudera.com/cloudera_thirdparty/logspout/logspout:v3.2.2
 
     logrotate:
         environment:
@@ -71,7 +71,7 @@ services:
             options:
                 max-size: "10M"
                 max-file: "5"
-        image: hortonworks/logrotate:{{{get . "DOCKER_TAG_LOGROTATE"}}}
+        image: docker-private.infra.cloudera.com/cloudera_thirdparty/logrotate/logrotate:{{{get . "DOCKER_TAG_LOGROTATE"}}}
 
     {{{get . "COMMON_DB"}}}:
         labels:
@@ -109,7 +109,7 @@ services:
         command: server
 
     jaeger:
-        image: jaegertracing/all-in-one:1.13
+        image: docker-private.infra.cloudera.com/cloudera_thirdparty/jaegertracing/all-in-one:1.13
         networks:
             - {{{get . "DOCKER_NETWORK_NAME"}}}
         ports:
