--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -125,6 +125,7 @@ services:
             - ULU_HWX_CLOUD_DEFAULT_ARM_VIRTUAL_NETWORK_ID
             - ULU_ADDRESS_RESOLVING_TIMEOUT
             - "ULU_CLOUDBREAK_ADDRESS={{{get . "CLOUDBREAK_URL"}}}"
+            - "ULU_AUDIT_ADDRESS={{{get . "AUDIT_API_URL"}}}"
             - "ULU_DATALAKE_ADDRESS={{{get . "DATALAKE_URL"}}}"
             - "ULU_ENVIRONMENT_ADDRESS={{{get . "ENVIRONMENT_URL"}}}"
             - "ULU_PERISCOPE_ADDRESS={{{get . "PERISCOPE_URL"}}}"
@@ -171,4 +172,5 @@ services:
 
 {{{- if eq (get . "CB_AUDIT_SERVICE_ENABLED") "true" }}}
 {{{- block "audit" .}}}{{{end}}}
+{{{- block "audit-api" .}}}{{{end}}}
 {{{- end}}}
