--- a/templates/compose-redbeams.tmpl
+++ b/templates/compose-redbeams.tmpl
@@ -22,6 +22,7 @@
             - REDBEAMS_ADDRESS_RESOLVING_TIMEOUT
             - "REDBEAMS_CLOUDBREAK_URL={{{get . "CLOUDBREAK_URL"}}}"
             - "REDBEAMS_ENVIRONMENT_URL={{{get . "ENVIRONMENT_URL"}}}"
+            - "REDBEAMS_SDX_URL={{{get . "DATALAKE_URL"}}}"
             - REDBEAMS_SCHEMA_SCRIPTS_LOCATION
             - REDBEAMS_SCHEMA_MIGRATION_AUTO
             - REDBEAMS_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
