CB-8700 update docker-compose and set memory and cpu limit to cloudbreak services

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -122,4 +122,9 @@
                 max-file: "5"
         image: {{{get . "DOCKER_IMAGE_CLOUDBREAK"}}}:{{{get . "DOCKER_TAG_CLOUDBREAK"}}}
         command: bash
+        deploy:
+            resources:
+                limits:
+                    memory: {{{get . "MEMORY_FOR_CLOUDBREAK"}}}
+                    cpus: {{{get . "CPUS_FOR_CLOUDBREAK"}}}
 {{{end}}}
