--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -62,4 +62,9 @@
                 max-file: "5"
         image: {{{get . "DOCKER_IMAGE_CLOUDBREAK_ENVIRONMENT"}}}:{{{get . "DOCKER_TAG_ENVIRONMENT"}}}
         command: bash
+        deploy:
+            resources:
+                limits:
+                    memory: {{{get . "MEMORY_FOR_OTHER_SERVICES"}}}
+                    cpus: {{{get . "CPUS_FOR_SERVICES"}}}
   {{{end}}}  
