--- a/templates/compose-freeipa.tmpl
+++ b/templates/compose-freeipa.tmpl
@@ -68,5 +68,10 @@
                 max-file: "5"
         image: {{{get . "DOCKER_IMAGE_CLOUDBREAK_FREEIPA"}}}:{{{get . "DOCKER_TAG_FREEIPA"}}}
         command: bash
+        deploy:
+            resources:
+                limits:
+                    memory: {{{get . "MEMORY_FOR_OTHER_SERVICES"}}}
+                    cpus: {{{get . "CPUS_FOR_SERVICES"}}}
   {{{end}}}
   
