CB-8782 by default microservices are logging to standard output to avoid infalting containers in k8s deployments, however in docker-compose based deployments there is no out of the box log collection, therefore we should just enable writing logs into file if applications are launched from cbd.
Summary:
- k8s logging to standard output, logs are collected by fluentd, k8s deployment related configs are in a separate repo and not in cloudbreak-deployer
- cbd logging to standard output, and to file with logback config
- IDEA gging to standard output, you can redirect consol log to a file if you wish (actually this is what I do)
- integartion test: integration test is not deployed to k8s, it is not touched with this pull request and logs are put to different logfiles separated by logsuit identifier

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -69,6 +69,7 @@
             - CB_COMPONENT_CREATED
             - CB_COMPONENT_CLUSTER_ID
             - CB_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - CB_DEFAULT_GATEWAY_CIDR
             {{{- if eq (get . "CB_AUDIT_FILE_ENABLED") "true"}}}
             - CB_AUDIT_FILEPATH=/cloudbreak-log/cb-audit.log
