--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -28,6 +28,7 @@
             - ENVIRONMENT_SCHEMA_MIGRATION_AUTO
             - ENVIRONMENT_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
             - ENVIRONMENT_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - ENVIRONMENT_ENABLEDPLATFORMS
             - VAULT_ADDR=vault
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
