--- a/templates/compose-freeipa.tmpl
+++ b/templates/compose-freeipa.tmpl
@@ -29,6 +29,7 @@
             - FREEIPA_SCHEMA_MIGRATION_AUTO
             - FREEIPA_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
             - FREEIPA_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - VAULT_ADDR=vault
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
