--- a/templates/compose-periscope.tmpl
+++ b/templates/compose-periscope.tmpl
@@ -27,6 +27,7 @@
             - PERISCOPE_SCHEMA_MIGRATION_AUTO
             - PERISCOPE_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
             - PERISCOPE_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - REST_DEBUG
             - CERT_VALIDATION
             - CB_DEFAULT_SUBSCRIPTION_ADDRESS
