--- a/templates/compose-datalake.tmpl
+++ b/templates/compose-datalake.tmpl
@@ -24,6 +24,7 @@
             - DATALAKE_SCHEMA_MIGRATION_AUTO
             - DATALAKE_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
             - DATALAKE_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - CB_ENABLEDPLATFORMS
             - "CLUSTERPROXY_URL={{{get . "CLUSTER_PROXY_URL"}}}"
             - VAULT_ADDR=vault
