--- a/templates/compose-redbeams.tmpl
+++ b/templates/compose-redbeams.tmpl
@@ -27,6 +27,7 @@
             - REDBEAMS_SCHEMA_MIGRATION_AUTO
             - REDBEAMS_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
             - REDBEAMS_LOG_LEVEL
+            - INTEGRATION_TEST_LOG_LEVEL
             - CB_ENABLEDPLATFORMS
             - VAULT_ADDR=vault
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
