CB-8700 Make sure that we have a proper limit defined for every service in cbd.

--- a/templates/compose-audit-api.tmpl
+++ b/templates/compose-audit-api.tmpl
@@ -23,4 +23,9 @@
                 max-size: "10M"
                 max-file: "5"
         image: {{{get . "DOCKER_IMAGE_AUDIT_API"}}}:{{{get . "DOCKER_TAG_AUDIT"}}}
+        deploy:
+          resources:
+            limits:
+              memory: 1024M
+              cpus: 1.0
 {{{end}}}
