CB-9112 add the infrastructure-mock service to cbd

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -92,6 +92,7 @@
             - "CB_SDX_URL={{{get . "DATALAKE_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - ALTUS_AUDIT_ENDPOINT
+            - MOCK_INFRASTRUCTURE_HOST
             - "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE={{{get . "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE"}}}"
             - "CB_SHOW_TERMINATED_CLUSTERS_DAYS={{{get . "CB_SHOW_TERMINATED_CLUSTERS_DAYS"}}}"
             - "CB_SHOW_TERMINATED_CLUSTERS_HOURS={{{get . "CB_SHOW_TERMINATED_CLUSTERS_HOURS"}}}"
