--- a/templates/compose-no-dps.tmpl
+++ b/templates/compose-no-dps.tmpl
@@ -2,5 +2,6 @@
     
 {{{- block "cb-traefik" .}}}{{{end}}}
 {{{- block "thunderhead-mock" .}}}{{{end}}}
+{{{- block "mock-infrastructure" .}}}{{{end}}}
 {{{- block "core-gateway" .}}}{{{end}}}
 {{{end}}}
