--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -36,6 +36,7 @@
             - "CAAS_URL={{{get . "THUNDERHEAD_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - ALTUS_AUDIT_ENDPOINT
+            - MOCK_INFRASTRUCTURE_HOST
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
             - OPENTRACING_JAEGER_UDP-SENDER_HOST={{{get . "JAEGER_HOST"}}}
             - "ALTUS_IDBMMS_HOST={{{get . "IDBMMS_HOST"}}}"
