--- a/templates/compose-periscope.tmpl
+++ b/templates/compose-periscope.tmpl
@@ -38,6 +38,7 @@
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - ALTUS_AUDIT_ENDPOINT
+            - MOCK_INFRASTRUCTURE_HOST
             - OPENTRACING_JAEGER_UDP-SENDER_HOST={{{get . "JAEGER_HOST"}}}
         labels:
         - traefik.port=8080
