--- a/templates/compose-redbeams.tmpl
+++ b/templates/compose-redbeams.tmpl
@@ -35,6 +35,7 @@
             - "CAAS_URL={{{get . "THUNDERHEAD_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - ALTUS_AUDIT_ENDPOINT
+            - MOCK_INFRASTRUCTURE_HOST
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
             - OPENTRACING_JAEGER_UDP-SENDER_HOST={{{get . "JAEGER_HOST"}}}
         labels:
