CB-9874 Make cdp public endpoint service locally debuggable
So far debugging of CB public endpoints' code was not resolved. The public endpoint services however are provisioned for the usage of debug flag and debug port.
This is now introduced in CBD.

There were wrongly configured hosts (cb and autoscale) in public services docker containers, this is also going to be fixed.

--- a/templates/compose-distrox-api.tmpl
+++ b/templates/compose-distrox-api.tmpl
@@ -5,13 +5,14 @@
             - https_proxy={{{get . "HTTPS_PROXY"}}}
             - "SERVICEDEPENDENCIES_UMSHOST={{{get . "UMS_HOST"}}}"
             - "SERVICEDEPENDENCIES_UMSPORT={{{get . "UMS_PORT"}}}"
-            - "SERVICEDEPENDENCIES_CLOUDBREAKHOST={{{get . "CB_HOST_ADDRESS"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKHOST={{{get . "CLOUDBREAK_HOST"}}}"
             - "SERVICEDEPENDENCIES_CLOUDBREAKPORT={{{get . "CB_PORT"}}}"
-            - "SERVICEDEPENDENCIES_PERISCOPEHOST={{{get . "PERISCOPE_HOST_ADDRESS"}}}"
+            - "SERVICEDEPENDENCIES_PERISCOPEHOST={{{get . "PERISCOPE_HOST"}}}"
             - "SERVICEDEPENDENCIES_PERISCOPEPORT={{{get . "PERISCOPE_PORT"}}}"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHHOST=localhost"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHPORT={{{get . "DISTROX_API_HEALTHZ_PORT"}}}"
             - TELEMETRY_SERVICE_NAME=DistroxApi
+            - DEBUG={{{get . "DISTROX_API_DEBUG"}}}
         {{{- if get . "DISTROX_API_TARGET_PATH"}}}
         volumes:
         - {{{get . "DISTROX_API_TARGET_PATH"}}}/dependency-hard-links:/thunderhead-distrox-api-service/lib
@@ -23,6 +24,7 @@
             - traefik.backend=distrox-api-backend
             - traefik.frontend.priority=10
         ports:
+            - {{{get . "DISTROX_API_DEBUG_PORT"}}}:5005
             - 8988:8982
             - {{{get . "DISTROX_API_HEALTHZ_PORT"}}}:8983
         networks:
