--- a/templates/compose-datalake-api.tmpl
+++ b/templates/compose-datalake-api.tmpl
@@ -10,6 +10,7 @@
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHHOST=localhost"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHPORT=8986"
             - TELEMETRY_SERVICE_NAME=DatalakeApi
+            - DEBUG={{{get . "DATALAKE_API_DEBUG"}}}
         {{{- if get . "DATALAKE_API_TARGET_PATH"}}}
         volumes:
         - {{{get . "DATALAKE_API_TARGET_PATH"}}}/dependency-hard-links:/thunderhead-datalake-api-service/lib
@@ -21,6 +22,7 @@
             - traefik.backend=datalake-api-backend
             - traefik.frontend.priority=10
         ports:
+            - {{{get . "DATALAKE_API_DEBUG_PORT"}}}:5005
             - 8986:8982
             - {{{get . "DATALAKE_API_HEALTHZ_PORT"}}}:8983
         networks:
