CB-11132 Add Datalak DR servie to CBD
- the default port is changed to avoid collision with thunderhead-mock
- disabled by default, add `export DATALAKE_DR_ENABLED=true` to `Profile` to enable
- if you run datalake service outside cbd you have to enable it with environment variable: `ALTUS_DATALAKEDR_ENABLED=true`

--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -142,3 +142,6 @@ services:
 {{{- block "audit" .}}}{{{end}}}
 {{{- block "audit-api" .}}}{{{end}}}
 {{{- end}}}
+{{{- if eq (get . "DATALAKE_DR_ENABLED") "true" }}}
+{{{ block "datalake-dr" .}}}{{{end}}}
+{{{- end}}}
