--- a/templates/compose-datalake.tmpl
+++ b/templates/compose-datalake.tmpl
@@ -38,6 +38,8 @@
             - "ALTUS_IDBMMS_HOST={{{get . "IDBMMS_HOST"}}}"
             - "ALTUS_IDBMMS_PORT={{{get . "IDBMMS_PORT"}}}"
             - STATUSCHECKER_ENABLED={{{get . "DATALAKE_STATUSCHECKER_ENABLED"}}}
+            - "ALTUS_DATALAKEDR_ENDPOINT={{{get . "DATALAKE_DR_ENDPOINT"}}}"
+            - "ALTUS_DATALAKEDR_ENABLED={{{get . "DATALAKE_DR_ENABLED"}}}"
         labels:
             - traefik.port=8080
             - traefik.frontend.rule=PathPrefix:/dl/
