--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -30,6 +30,7 @@
             - ENVIRONMENT_LOG_LEVEL
             - INTEGRATION_TEST_LOG_LEVEL
             - ENVIRONMENT_ENABLEDPLATFORMS
+            - CDP_PLATFORMS_ENABLED_PLATFORMS
             - VAULT_ADDR=vault
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
