CB-11254 - update cbd with new cb image to introduce mock infrastructure changes

--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -45,6 +45,8 @@
             - ENVIRONMENT_AUTOSYNC_UPDATE_STATUS
             - ENVIRONMENT_AUTOSYNC_ENABLED
             - ENVIRONMENT_EXPERIENCE_SCAN_ENABLED
+            - MOCK_INFRASTRUCTURE_ADDRESS={{{get . "MOCK_INFRASTRUCTURE_HOST"}}}
+            - MOCK_INFRASTRUCTURE_BIND_PORT={{{get . "MOCK_INFRASTRUCTURE_BIND_PORT"}}}
         labels:
             - traefik.port=8088
             - traefik.frontend.rule=PathPrefix:/environmentservice/
