CB-12300 Bumping public api image versions

--- a/templates/compose-environments2-api.tmpl
+++ b/templates/compose-environments2-api.tmpl
@@ -11,6 +11,8 @@
             - "SERVICEDEPENDENCIES_CLOUDBREAKENVPORT={{{get . "ENVIRONMENT_PORT"}}}"
             - "SERVICEDEPENDENCIES_FMSHOST={{{get . "FREEIPA_HOST"}}}"
             - "SERVICEDEPENDENCIES_FMSPORT={{{get . "FREEIPA_PORT"}}}"
+            - "SERVICEDEPENDENCIES_WORKLOADIAMHOST=dummy"
+            - "SERVICEDEPENDENCIES_WORKLOADIAMPORT=11111"
             - TELEMETRY_SERVICE_NAME=Environments2Api
             - DEBUG={{{get . "ENVIRONMENTS2_DEBUG"}}}
         {{{- if get . "ENVIRONMENTS2_API_TARGET_PATH"}}}
