CB-12379 Add datalake dr dependencies and configuration to cbd
Fix that Datalake API service throws http2 exception when connects to datalake dr service.

--- a/templates/compose-datalake-api.tmpl
+++ b/templates/compose-datalake-api.tmpl
@@ -9,6 +9,8 @@
             - "SERVICEDEPENDENCIES_DATALAKEPORT={{{get . "DATALAKE_PORT"}}}"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHHOST=localhost"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHPORT=8986"
+            - "SERVICEDEPENDENCIES_DATALAKEDRHOST={{{get . "DATALAKE_DR_HOST"}}}"
+            - "SERVICEDEPENDENCIES_DATALAKEDRPORT={{{get . "DATALAKE_DR_PORT"}}}"
             - TELEMETRY_SERVICE_NAME=DatalakeApi
             - DEBUG={{{get . "DATALAKE_API_DEBUG"}}}
         {{{- if get . "DATALAKE_API_TARGET_PATH"}}}
