CB-12113 Add thunderhead service WorkloadIam for Environments2Api
* Add new thunderhead service WorkloadIam as container workloadiam.
* Wire WorkloadIam endpoint dependency for Environments2Api.

--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -136,6 +136,7 @@ services:
 {{{- block "redbeams" .}}}{{{end}}}
 {{{- block "freeipa" .}}}{{{end}}}
 {{{- block "idbmms" .}}}{{{end}}}
+{{{- block "workloadiam" .}}}{{{end}}}
 {{{- block "environments2-api" .}}}{{{end}}}
 {{{- block "datalake-api" .}}}{{{end}}}
 {{{- block "distrox-api" .}}}{{{end}}}
