--- a/templates/compose-environments2-api.tmpl
+++ b/templates/compose-environments2-api.tmpl
@@ -11,8 +11,8 @@
             - "SERVICEDEPENDENCIES_CLOUDBREAKENVPORT={{{get . "ENVIRONMENT_PORT"}}}"
             - "SERVICEDEPENDENCIES_FMSHOST={{{get . "FREEIPA_HOST"}}}"
             - "SERVICEDEPENDENCIES_FMSPORT={{{get . "FREEIPA_PORT"}}}"
-            - "SERVICEDEPENDENCIES_WORKLOADIAMHOST=dummy"
-            - "SERVICEDEPENDENCIES_WORKLOADIAMPORT=11111"
+            - "SERVICEDEPENDENCIES_WORKLOADIAMHOST={{{get . "WORKLOADIAM_HOST"}}}"
+            - "SERVICEDEPENDENCIES_WORKLOADIAMPORT={{{get . "WORKLOADIAM_PORT"}}}"
             - TELEMETRY_SERVICE_NAME=Environments2Api
             - DEBUG={{{get . "ENVIRONMENTS2_DEBUG"}}}
         {{{- if get . "ENVIRONMENTS2_API_TARGET_PATH"}}}
