CB-12709 Put WorkloadIam container creation behind a flag
Follow-up to #730. The thunderhead service WorkloadIam used to be always
started so far. Since this service is non-essential for everyday
development via CBD (unless testing some specific user-sync use cases
that need WorkloadIam), the startup of WorkloadIam is made optional
here. In particular, CBD service "workloadiam" / Docker container
"cbreak_workloadiam_1" will only be started if the new Profile setting
WORKLOADIAM_ENABLED is set to "true". This flag defaults to "false",
so omitting the setting in Profile has the same effect as including the
following statement:

export WORKLOADIAM_ENABLED=false

To enable WorkloadIam container creation, add the following to your CBD
Profile:

export WORKLOADIAM_ENABLED=true

Irrespective of the value of WORKLOADIAM_ENABLED, Environments2Api will
always receive the appropriate environment variables for its WorkloadIam
connectivity dependency. Please note that these settings will be
effectively invalid if WorkloadIam is not running, so any CLI
invocations relying on the availability of WorkloadIam will fail in such
cases.

--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -136,7 +136,9 @@ services:
 {{{- block "redbeams" .}}}{{{end}}}
 {{{- block "freeipa" .}}}{{{end}}}
 {{{- block "idbmms" .}}}{{{end}}}
+{{{- if eq (get . "WORKLOADIAM_ENABLED") "true" }}}
 {{{- block "workloadiam" .}}}{{{end}}}
+{{{- end}}}
 {{{- block "environments2-api" .}}}{{{end}}}
 {{{- block "datalake-api" .}}}{{{end}}}
 {{{- block "distrox-api" .}}}{{{end}}}
