CB-13575 Add cluster proxy and inverting proxy service addresses

--- a/templates/compose-cluster-proxy.tmpl
+++ b/templates/compose-cluster-proxy.tmpl
@@ -17,6 +17,9 @@
             - TUNNEL_MANAGEMENT_HOST={{{get . "ALTUS_TUNNEL_MANAGEMENT_HOST"}}}
             - TUNNEL_MANAGEMENT_PORT={{{get . "ALTUS_TUNNEL_MANAGEMENT_PORT"}}}
             - DEBUG=true
+            - CCMV2_MANAGEMENT_SERVICE_HOST={{{get . "CCMV2_MANAGEMENT_SERVICE_HOST"}}}
+            - CCMV2_MANAGEMENT_SERVICE_PORT={{{get . "CCMV2_MANAGEMENT_SERVICE_PORT"}}}
+            - INVERTING_PROXY_SERVICE_PORT={{{get . "INVERTING_PROXY_SERVICE_PORT"}}}
         networks:
             - {{{get . "DOCKER_NETWORK_NAME"}}}
         restart: always
