CB-14337 Add inverting proxy host to the hosts file of cluster-proxy container

--- a/templates/compose-cluster-proxy.tmpl
+++ b/templates/compose-cluster-proxy.tmpl
@@ -29,6 +29,8 @@
             - "traefik.port=10080"
         ports:
             - 10180:10080
+        extra_hosts:
+            - "{{{get . "INVERTING_PROXY_SERVICE_HOST"}}}:{{{get . "BRIDGE_EXTERNAL_IP"}}}"
         deploy:
           resources:
             limits:
