CB-14300 cbd should support configuring webcontainer to use postgres session store
Required env variable to enable the feature: ULU_ENABLE_DB_SESSION_STORE=true
Database config related env variables: ULU_DB_HOST, ULU_DB_PORT, ULU_DB_ENV_DB, ULU_DB_ENV_SCHEMA ,ULU_DB_ENV_USER, ULU_DB_ENV_PASS

--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -105,6 +105,14 @@ services:
             - AWS_ACCESS_KEY_ID
             - AWS_SECRET_ACCESS_KEY
             - CAAS_ENABLED=true
+            {{{- if eq (get . "ULU_ENABLE_DB_SESSION_STORE") "true" }}}
+            - "POSTGRES_HOST_ADDRESS={{{get . "ULU_DB_HOST"}}}"
+            - "POSTGRES_PORT={{{get . "ULU_DB_PORT"}}}"
+            - "POSTGRES_USER={{{get . "ULU_DB_ENV_USER"}}}"
+            - "POSTGRES_PASS={{{get . "ULU_DB_ENV_PASS"}}}"
+            - "POSTGRES_DB={{{get . "ULU_DB_ENV_DB"}}}"
+            - "POSTGRES_SCHEMA={{{get . "ULU_DB_ENV_SCHEMA"}}}"
+            {{{- end}}}
         labels:
         - traefik.frontend.rule={{{get . "ULUWATU_FRONTEND_RULE"}}}
         - traefik.port=3000
