CDPSDX-3218: Added environment host and port info to Datalake-DR template.

--- a/templates/compose-datalake-dr.tmpl
+++ b/templates/compose-datalake-dr.tmpl
@@ -5,6 +5,8 @@
             - https_proxy={{{get . "HTTPS_PROXY"}}}
             - "SERVICEDEPENDENCIES_UMSHOST={{{get . "UMS_HOST"}}}"
             - "SERVICEDEPENDENCIES_UMSPORT={{{get . "UMS_PORT"}}}"
+            - "SERVICEDEPENDENCIES_ENVIRONMENTHOST={{{get . "ENVIRONMENT_HOST"}}}"
+            - "SERVICEDEPENDENCIES_ENVIRONMENTPORT={{{get . "ENVIRONMENT_PORT"}}}"
             - "SERVICEDEPENDENCIES_DATALAKEHOST={{{get . "DATALAKE_HOST"}}}"
             - "SERVICEDEPENDENCIES_DATALAKEPORT={{{get . "DATALAKE_PORT"}}}"
             - "SERVICEDEPENDENCIES_CLUSTERPROXYHOST={{{get . "CLUSTER_PROXY_HOST"}}}"
