CB-14678 modify environment and cloudbreak service compose templates to CLUSTERDNS_HOST variable be configurable

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -105,6 +105,7 @@
             - ALTUS_MINASSHDMGMT_HOST={{{get . "ALTUS_TUNNEL_MANAGEMENT_HOST"}}}
             - ALTUS_MINASSHDMGMT_PORT={{{get . "ALTUS_TUNNEL_MANAGEMENT_PORT"}}}
             - STATUSCHECKER_ENABLED={{{get . "CB_STATUSCHECKER_ENABLED"}}}
+            - CLUSTERDNS_HOST
         labels:
         - traefik.port=8080
         - traefik.frontend.rule=PathPrefix:/cb/
