CB-15493 - adding cloudbreak env host and port env variables for distrox public api service template file

--- a/templates/compose-distrox-api.tmpl
+++ b/templates/compose-distrox-api.tmpl
@@ -7,6 +7,8 @@
             - "SERVICEDEPENDENCIES_UMSPORT={{{get . "UMS_PORT"}}}"
             - "SERVICEDEPENDENCIES_CLOUDBREAKHOST={{{get . "CLOUDBREAK_HOST"}}}"
             - "SERVICEDEPENDENCIES_CLOUDBREAKPORT={{{get . "CB_PORT"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKENVHOST={{{get . "ENVIRONMENT_HOST"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKENVPORT={{{get . "ENVIRONMENT_PORT"}}}"
             - "SERVICEDEPENDENCIES_PERISCOPEHOST={{{get . "PERISCOPE_HOST"}}}"
             - "SERVICEDEPENDENCIES_PERISCOPEPORT={{{get . "PERISCOPE_PORT"}}}"
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHHOST=localhost"
