DISTX-719:Add cloudbreak env host port for datalake template

--- a/templates/compose-datalake-api.tmpl
+++ b/templates/compose-datalake-api.tmpl
@@ -11,6 +11,8 @@
             - "SERVICEDEPENDENCIES_CLUSTERHEALTHPORT=8986"
             - "SERVICEDEPENDENCIES_DATALAKEDRHOST={{{get . "DATALAKE_DR_HOST"}}}"
             - "SERVICEDEPENDENCIES_DATALAKEDRPORT={{{get . "DATALAKE_DR_PORT"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKENVHOST={{{get . "ENVIRONMENT_HOST"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKENVPORT={{{get . "ENVIRONMENT_PORT"}}}"
             - TELEMETRY_SERVICE_NAME=DatalakeApi
             - DEBUG={{{get . "DATALAKE_API_DEBUG"}}}
         {{{- if get . "DATALAKE_API_TARGET_PATH"}}}
