--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -6,6 +6,7 @@
             - AWS_GOV_ACCESS_KEY_ID
             - AWS_GOV_SECRET_ACCESS_KEY
             - CB_AWS_ACCOUNT_ID
+            - CB_AWS_GOV_ACCOUNT_ID
             {{{- if get . "HTTP_PROXY"}}}
             - "http_proxy={{{get . "HTTP_PROXY"}}}"
             {{{- end}}}
