--- a/templates/compose-redbeams.tmpl
+++ b/templates/compose-redbeams.tmpl
@@ -6,6 +6,7 @@
             - AWS_GOV_ACCESS_KEY_ID
             - AWS_GOV_SECRET_ACCESS_KEY
             - CB_AWS_ACCOUNT_ID
+            - CB_AWS_GOV_ACCOUNT_ID
             - http_proxy={{{get . "HTTP_PROXY"}}}
             - https_proxy={{{get . "HTTPS_PROXY"}}}
             - CERT_VALIDATION
