CB-16674 adding consumption service to deployer

--- a/templates/compose-main.tmpl
+++ b/templates/compose-main.tmpl
@@ -139,6 +139,7 @@ services:
 {{{ block "cluster-proxy" .}}}{{{end}}}
 {{{- block "cloudbreak" .}}}{{{end}}}
 {{{- block "datalake" .}}}{{{end}}}
+{{{- block "consumption" .}}}{{{end}}}
 {{{- block "environment" .}}}{{{end}}}
 {{{- block "periscope" .}}}{{{end}}}
 {{{- block "redbeams" .}}}{{{end}}}
