CB-16771 add cbd config for sdx saas (using thunderhead-mock for now)

--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -37,6 +37,8 @@
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
             - "CAAS_URL={{{get . "THUNDERHEAD_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "SAAS_SDX_HOST={{{get . "SAAS_SDX_HOST"}}}"
+            - "SAAS_SDX_PORT={{{get . "SAAS_SDX_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - MOCK_INFRASTRUCTURE_HOST
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
