CB-17067 Integrate with service discovery to get remoteDataContext for datahubs

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -93,6 +93,8 @@
             - "CB_REDBEAMS_URL={{{get . "REDBEAMS_URL"}}}"
             - "CB_SDX_URL={{{get . "DATALAKE_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "SAAS_SERVICEDISCOVERY_HOST={{{get . "SAAS_SERVICEDISCOVERY_HOST"}}}"
+            - "SAAS_SERVICEDISCOVERY_PORT={{{get . "SAAS_SERVICEDISCOVERY_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - MOCK_INFRASTRUCTURE_HOST
             - "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE={{{get . "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE"}}}"
