CB-17067 core should integrate with sdx saas service too to get remotedatacontext

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -95,6 +95,8 @@
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - "SAAS_SERVICEDISCOVERY_HOST={{{get . "SAAS_SERVICEDISCOVERY_HOST"}}}"
             - "SAAS_SERVICEDISCOVERY_PORT={{{get . "SAAS_SERVICEDISCOVERY_PORT"}}}"
+            - "SAAS_SDX_HOST={{{get . "SAAS_SDX_HOST"}}}"
+            - "SAAS_SDX_PORT={{{get . "SAAS_SDX_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - MOCK_INFRASTRUCTURE_HOST
             - "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE={{{get . "CB_SHOW_TERMINATED_CLUSTERS_ACTIVE"}}}"
