--- a/templates/compose-freeipa.tmpl
+++ b/templates/compose-freeipa.tmpl
@@ -36,6 +36,8 @@
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "AUTHDISTRIBUTOR_HOST={{{get . "AUTHDISTRIBUTOR_HOST"}}}"
+            - "AUTHDISTRIBUTOR_PORT={{{get . "AUTHDISTRIBUTOR_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - CDP_PLATFORMS_SUPPORTEDPLATFORMS
             - MOCK_INFRASTRUCTURE_HOST
