CB-17265 set Consumption service URL for Environment and Datalake services

--- a/templates/compose-datalake.tmpl
+++ b/templates/compose-datalake.tmpl
@@ -20,6 +20,8 @@
             - "DATALAKE_ENVIRONMENTSERVICE_URL={{{get . "ENVIRONMENT_URL"}}}"
             - "DATALAKE_REDBEAMS_URL={{{get . "REDBEAMS_URL"}}}"
             - "DATALAKE_FREEIPA_URL={{{get . "FREEIPA_URL"}}}"
+            - "DATALAKE_CONSUMPTION_URL={{{get . "CONSUMPTION_URL"}}}"
+            - "DATALAKE_CONSUMPTION_ENABLED={{{get . "CONSUMPTION_ENABLED"}}}"
             - DATALAKE_SCHEMA_SCRIPTS_LOCATION
             - DATALAKE_SCHEMA_MIGRATION_AUTO
             - DATALAKE_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
