--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -25,6 +25,8 @@
             - "ENVIRONMENT_FREEIPA_URL={{{get . "FREEIPA_URL"}}}"
             - "ENVIRONMENT_REDBEAMS_URL={{{get . "REDBEAMS_URL"}}}"
             - "ENVIRONMENT_SDX_URL={{{get . "DATALAKE_URL"}}}"
+            - "ENVIRONMENT_CONSUMPTION_URL={{{get . "CONSUMPTION_URL"}}}"
+            - "ENVIRONMENT_CONSUMPTION_ENABLED={{{get . "CONSUMPTION_ENABLED"}}}"
             - ENVIRONMENT_SCHEMA_SCRIPTS_LOCATION
             - ENVIRONMENT_SCHEMA_MIGRATION_AUTO
             - ENVIRONMENT_INSTANCE_NODE_ID={{{get . "CB_INSTANCE_NODE_ID"}}}
