--- a/templates/compose-core-gateway.tmpl
+++ b/templates/compose-core-gateway.tmpl
@@ -3,11 +3,7 @@
         {{{- if get . "DPS_REPO"}}}
         build: {{{get . "DPS_REPO"}}}/core-gateway
         {{{- end}}}
-        {{{- if eq (get . "UMS_HOST") "ums.thunderhead-dev.cloudera.com"}}}
         image: docker-private.infra.cloudera.com/cloudera/cdp-gateway:{{{get . "CDP_GW_VERSION"}}}
-        {{{- else }}}
-        image: docker-private.infra.cloudera.com/cloudera_thirdparty/dps-gateway:{{{get . "DPS_VERSION"}}}
-        {{{- end }}}
         # ports:
             # - {{{get . "PUBLIC_HTTP_PORT"}}}:3000
             # - {{{get . "PUBLIC_HTTPS_PORT"}}}:443
@@ -15,16 +11,14 @@
         - {{{get . "DOCKER_NETWORK_NAME"}}}
         environment:
         - "CAAS_ADDRESS=http://{{{get . "THUNDERHEAD_URL"}}}"
-        - GATEWAY_DPS_JWT_COOKIE_NAME=dps-jwt
         - GATEWAY_UPSTREAM_HOSTNAME=traefik
         - GATEWAY_UPSTREAM_PORT=80
         - GATEWAY_UNAUTHENTICATED_PATHS=pathPrefix:/idp,pathPrefix:/oidc,pathPrefix:/thunderhead,pathPrefix:/thunderhead/auth,!pathPrefix:/thunderhead/api,pathPrefix:/core,!pathPrefix:/core/api,pathPrefix:/cloud/cb/info,pathPrefix:/cb/info,pathPrefix:/environmentservice/info,pathPrefix:/dl/info,pathPrefix:/freeipa/info
         - UMS_HOST={{{get . "UMS_HOST"}}}
-        - GATEWAY_DEFAULT_REDIRECT_PATH={{{get . "GATEWAY_DEFAULT_REDIRECT_PATH"}}}
-        {{{- if eq (get . "UMS_HOST") "ums.thunderhead-dev.cloudera.com"}}}
+        - GATEWAY_DEFAULT_REDIRECT_URI={{{get . "GATEWAY_DEFAULT_REDIRECT_PATH"}}}
         - GRPC_TIMEOUT_MS=20000
-        {{{- end }}}
         - GATEWAY_REDIRECT_ENDPOINT_PATH=/thunderhead/auth/in
+        - CORS_ALLOWED_ORIGINS=*
         deploy:
           resources:
             limits:
