--- a/templates/compose-consumption.tmpl
+++ b/templates/compose-consumption.tmpl
@@ -16,6 +16,7 @@
             - CONSUMPTION_HOSTNAME_RESOLUTION=public
             - CONSUMPTION_ADDRESS_RESOLVING_TIMEOUT
             - "CONSUMPTION_DB_AVAILABILITY={{{get . "CONSUMPTION_DB_AVAILABILITY"}}}"
+            - "CONSUMPTION_CLOUDBREAK_URL={{{get . "CLOUDBREAK_URL"}}}"
             - "CONSUMPTION_ENVIRONMENT_URL={{{get . "ENVIRONMENT_URL"}}}"
             - CONSUMPTION_SCHEMA_SCRIPTS_LOCATION
             - CONSUMPTION_SCHEMA_MIGRATION_AUTO
