--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -91,6 +91,8 @@
             - "CB_ENVIRONMENT_URL={{{get . "ENVIRONMENT_URL"}}}"
             - "CB_FREEIPA_URL={{{get . "FREEIPA_URL"}}}"
             - "CB_REDBEAMS_URL={{{get . "REDBEAMS_URL"}}}"
+            - "CB_CONSUMPTION_URL={{{get . "CONSUMPTION_URL"}}}"
+            - "CB_CONSUMPTION_ENABLED={{{get . "CONSUMPTION_ENABLED"}}}"
             - "CB_SDX_URL={{{get . "DATALAKE_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
             - "SAAS_SERVICEDISCOVERY_HOST={{{get . "SAAS_SERVICEDISCOVERY_HOST"}}}"
